src/objects/APTS_Agreement_Volume_Obligation_Line__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Agreement_Volume_Obligation__c</fullName>
        <label>Agreement Volume Obligation</label>
        <referenceTo>APTS_AgreementVolumeObligation__c</referenceTo>
        <relationshipName>Agreement_Volume_Obligation_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Volume Assumption Obligation Line Item</relationshipLabel>
        <relationshipName>Volume_Assumption_Obligation_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_External_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Order Summary Item</label>
        <referenceTo>Apttus_Config2__ExternalOrderSummaryItem__c</referenceTo>
        <relationshipLabel>Volume Assumption Obligation Line Item</relationshipLabel>
        <relationshipName>Volume_Assumption_Obligation_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Fulfillment_Date__c</fullName>
        <label>Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Order_In_Progress_Quantity__c</fullName>
        <label>Order In Progress Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Volume Assumption Obligation Line Item</relationshipLabel>
        <relationshipName>Agreement_Volume_Obligation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Ordered_Quantity__c</fullName>
        <label>Fulfilled Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Volume Assumption Obligation Line Item</label>
    <nameField>
        <displayFormat>AI-{00000000}</displayFormat>
        <label>Volume Obligation Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Assumption Obligation Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>